fixed image squishing

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ form{
     border-radius: 100%;
     width: 78px!important;
     height: 78px!important;
-    justify-content: center;
+    
 }
 .expertName{
     margin-bottom:0px;
